PS/EPS/PDF files created with Inkscape 0.47pre versions on win32 platforms using the cairo renderer are far bigger in size than the same SVG files exported with the same Inkscape version on osx. «Cairo should be merging multiple uses of the same font into the same subset.» Please see the discussion in these two Inkscape bug reports for more details: Bug #271695 in Inkscape: “Kerned text embeds too many fonts and blows up the file size in EPS/PS”: <https://bugs.launchpad.net/inkscape/+bug/271695> Bug #469180 in Inkscape: “Significant Differences in exported File Size from 0.46 to 0.47pre3/4”: <https://bugs.launchpad.net/inkscape/+bug/469180>
Fixed with this commit: http://cgit.freedesktop.org/cairo/commit/?id=eb29a25dd6dddc511388bf883c9b95843ecdb823
Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.